formulas/physics_wrapper.py

"""
Python wrapper для вызова функций из physics.dll
Использует ctypes для взаимодействия с C++ DLL
"""
import os
import sys
from pathlib import Path
from ctypes import CDLL, c_double, c_int, POINTER
from typing import Optional

# Получаем путь к DLL
CURRENT_DIR = Path(__file__).parent
DLL_PATH = CURRENT_DIR / "physics.dll"

# Глобальная переменная для хранения загруженной DLL
_PHYSICS_DLL = None
_DLL_LOADED = False
_DLL_LOAD_ERROR = None


def _load_dll():
    """Загружает DLL один раз при импорте модуля"""
    global _PHYSICS_DLL, _DLL_LOADED, _DLL_LOAD_ERROR
    
    # Если уже загружена, возвращаем
    if _DLL_LOADED and _PHYSICS_DLL is not None:
        return _PHYSICS_DLL
    
    # Если была ошибка загрузки, выбрасываем её
    if _DLL_LOAD_ERROR is not None:
        raise _DLL_LOAD_ERROR
    
    try:
        if not DLL_PATH.exists():
            raise FileNotFoundError(f"DLL файл не найден: {DLL_PATH}")
        
        _PHYSICS_DLL = CDLL(str(DLL_PATH))
        
        # Настройка типов возвращаемых значений для всех функций
        # Все функции возвращают double
        _PHYSICS_DLL.gravity.argtypes = [c_double, c_double]
        _PHYSICS_DLL.gravity.restype = c_double
        
        _PHYSICS_DLL.Newton_second_law.argtypes = [c_double, c_double]
        _PHYSICS_DLL.Newton_second_law.restype = c_double
        
        _PHYSICS_DLL.universal_gravitation.argtypes = [c_double, c_double, c_double, c_double]
        _PHYSICS_DLL.universal_gravitation.restype = c_double
        
        _PHYSICS_DLL.friction.argtypes = [c_double, c_double]
        _PHYSICS_DLL.friction.restype = c_double
        
        _PHYSICS_DLL.archimedes.argtypes = [c_double, c_double, c_double]
        _PHYSICS_DLL.archimedes.restype = c_double
        
        _PHYSICS_DLL.coulomb.argtypes = [c_double, c_double, c_double, c_double]
        _PHYSICS_DLL.coulomb.restype = c_double
        
        _PHYSICS_DLL.lorentz.argtypes = [c_double, c_double, c_double, c_double]
        _PHYSICS_DLL.lorentz.restype = c_double
        
        _PHYSICS_DLL.ampere.argtypes = [c_double, c_double, c_double, c_double]
        _PHYSICS_DLL.ampere.restype = c_double
        
        _PHYSICS_DLL.centripetal.argtypes = [c_double, c_double, c_double]
        _PHYSICS_DLL.centripetal.restype = c_double
        
        _PHYSICS_DLL.pressure.argtypes = [c_double, c_double]
        _PHYSICS_DLL.pressure.restype = c_double
        
        _PHYSICS_DLL.hydrostatic.argtypes = [c_double, c_double, c_double, c_double]
        _PHYSICS_DLL.hydrostatic.restype = c_double
        
        _PHYSICS_DLL.kinetic.argtypes = [c_double, c_double]
        _PHYSICS_DLL.kinetic.restype = c_double
        
        _PHYSICS_DLL.potential.argtypes = [c_double, c_double, c_double]
        _PHYSICS_DLL.potential.restype = c_double
        
        _PHYSICS_DLL.elastic_potential.argtypes = [c_double, c_double]
        _PHYSICS_DLL.elastic_potential.restype = c_double
        
        _PHYSICS_DLL.rotational_kinetic.argtypes = [c_double, c_double]
        _PHYSICS_DLL.rotational_kinetic.restype = c_double
        
        _PHYSICS_DLL.capacitor.argtypes = [c_double, c_double]
        _PHYSICS_DLL.capacitor.restype = c_double
        
        _PHYSICS_DLL.thermal.argtypes = [c_double, c_double, c_double]
        _PHYSICS_DLL.thermal.restype = c_double
        
        _PHYSICS_DLL.combustion.argtypes = [c_double, c_double]
        _PHYSICS_DLL.combustion.restype = c_double
        
        _PHYSICS_DLL.work_constant_force.argtypes = [c_double, c_double, c_double]
        _PHYSICS_DLL.work_constant_force.restype = c_double
        
        _PHYSICS_DLL.work_variable_force_linear.argtypes = [c_double, c_double, c_double]
        _PHYSICS_DLL.work_variable_force_linear.restype = c_double
        
        _PHYSICS_DLL.work_gas_isobaric.argtypes = [c_double, c_double]
        _PHYSICS_DLL.work_gas_isobaric.restype = c_double
        
        _PHYSICS_DLL.work_electric_field.argtypes = [c_double, c_double]
        _PHYSICS_DLL.work_electric_field.restype = c_double
        
        _PHYSICS_DLL.work_against_friction.argtypes = [c_double, c_double]
        _PHYSICS_DLL.work_against_friction.restype = c_double
        
        _PHYSICS_DLL.useful_work.argtypes = [c_double, c_double]
        _PHYSICS_DLL.useful_work.restype = c_double
        
        _PHYSICS_DLL.work_kinetic_energy_change.argtypes = [c_double, c_double, c_double]
        _PHYSICS_DLL.work_kinetic_energy_change.restype = c_double
        
        _PHYSICS_DLL.work_potential_energy_change.argtypes = [c_double, c_double, c_double, c_double]
        _PHYSICS_DLL.work_potential_energy_change.restype = c_double
        
        _PHYSICS_DLL.work_elastic_force.argtypes = [c_double, c_double, c_double]
        _PHYSICS_DLL.work_elastic_force.restype = c_double
        
        _PHYSICS_DLL.rest_energy.argtypes = [c_double]
        _PHYSICS_DLL.rest_energy.restype = c_double
        
        _PHYSICS_DLL.photon_energy.argtypes = [c_double]
        _PHYSICS_DLL.photon_energy.restype = c_double
        
        _PHYSICS_DLL.magnetic_energy.argtypes = [c_double, c_double]
        _PHYSICS_DLL.magnetic_energy.restype = c_double
        
        _PHYSICS_DLL.chemical_energy.argtypes = [c_double, c_double]
        _PHYSICS_DLL.chemical_energy.restype = c_double
        
        _PHYSICS_DLL.activation_energy.argtypes = [c_double, c_double, c_double]
        _PHYSICS_DLL.activation_energy.restype = c_double
        
        _PHYSICS_DLL.calculate_efficiency.argtypes = [c_double, c_double]
        _PHYSICS_DLL.calculate_efficiency.restype = c_double
        
        _PHYSICS_DLL.calculate_power.argtypes = [c_double, c_double]
        _PHYSICS_DLL.calculate_power.restype = c_double
        
        _PHYSICS_DLL.calculate_work_from_power.argtypes = [c_double, c_double]
        _PHYSICS_DLL.calculate_work_from_power.restype = c_double
        
        _DLL_LOADED = True
        print(f"DLL успешно загружена: {DLL_PATH}")
        return _PHYSICS_DLL
        
    except Exception as e:
        _DLL_LOAD_ERROR = e
        print(f"Ошибка загрузки DLL: {e}")
        raise


# Загружаем DLL один раз при импорте модуля
try:
    _load_dll()
except Exception:
    # Ошибка загрузки будет обработана при первом использовании
    pass


# Класс для работы с силами
class Force:
    """Функции для расчета сил"""
    
    @staticmethod
    def gravity(m: float, g: Optional[float] = None) -> float:
        """Сила тяжести: F = m * g"""
        try:
            if _PHYSICS_DLL is None:
                _load_dll()
            if g is None:
                from constants.physics import g as default_g
                g = default_g
            return _PHYSICS_DLL.gravity(c_double(m), c_double(g))
        except Exception as e:
            print(f"Ошибка расчета силы тяжести: {e}")
            raise
    
    @staticmethod
    def newton_second_law(m: float, a: float) -> float:
        """Второй закон Ньютона: F = m * a"""
        try:
            if _PHYSICS_DLL is None:
                _load_dll()
            return _PHYSICS_DLL.Newton_second_law(c_double(m), c_double(a))
        except Exception as e:
            print(f"Ошибка расчета по второму закону Ньютона: {e}")
            raise
    
    @staticmethod
    def universal_gravitation(m1: float, m2: float, r: float, G: Optional[float] = None) -> float:
        """Закон всемирного тяготения: F = G * m1 * m2 / r²"""
        try:
            if _PHYSICS_DLL is None:
                _load_dll()
            if G is None:
                from constants.physics import G as default_G
                G = default_G
            return _PHYSICS_DLL.universal_gravitation(c_double(m1), c_double(m2), c_double(r), c_double(G))
        except Exception as e:
            print(f"Ошибка расчета всемирного тяготения: {e}")
            raise
    
    @staticmethod
    def friction(u: float, N: float) -> float:
        """Сила трения: F = μ * N"""
        try:
            if _PHYSICS_DLL is None:
                _load_dll()
            return _PHYSICS_DLL.friction(c_double(u), c_double(N))
        except Exception as e:
            print(f"Ошибка расчета силы трения: {e}")
            raise
    
    @staticmethod
    def archimedes(p: float, V: float, g: Optional[float] = None) -> float:
        """Сила Архимеда: F = ρ * V * g"""
        try:
            if _PHYSICS_DLL is None:
                _load_dll()
            if g is None:
                from constants.physics import g as default_g
                g = default_g
            return _PHYSICS_DLL.archimedes(c_double(p), c_double(V), c_double(g))
        except Exception as e:
            print(f"Ошибка расчета силы Архимеда: {e}")
            raise
    
    @staticmethod
    def coulomb(q1: float, q2: float, r: float, k: Optional[float] = None) -> float:
        """Закон Кулона: F = k * q1 * q2 / r²"""
        try:
            if _PHYSICS_DLL is None:
                _load_dll()
            if k is None:
                from constants.physics import k as default_k
                k = default_k
            return _PHYSICS_DLL.coulomb(c_double(q1), c_double(q2), c_double(r), c_double(k))
        except Exception as e:
            print(f"Ошибка расчета силы Кулона: {e}")
            raise
    
    @staticmethod
    def lorentz(q: float, V: float, B: float, angle: float) -> float:
        """Сила Лоренца: F = q * V * B * sin(angle)"""
        try:
            if _PHYSICS_DLL is None:
                _load_dll()
            return _PHYSICS_DLL.lorentz(c_double(q), c_double(V), c_double(B), c_double(angle))
        except Exception as e:
            print(f"Ошибка расчета силы Лоренца: {e}")
            raise
    
    @staticmethod
    def ampere(B: float, I: float, L: float, angle: float) -> float:
        """Сила Ампера: F = B * I * L * sin(angle)"""
        try:
            if _PHYSICS_DLL is None:
                _load_dll()
            return _PHYSICS_DLL.ampere(c_double(B), c_double(I), c_double(L), c_double(angle))
        except Exception as e:
            print(f"Ошибка расчета силы Ампера: {e}")
            raise
    
    @staticmethod
    def centripetal(m: float, V: float, r: float) -> float:
        """Центростремительная сила: F = m * V² / r"""
        try:
            if _PHYSICS_DLL is None:
                _load_dll()
            return _PHYSICS_DLL.centripetal(c_double(m), c_double(V), c_double(r))
        except Exception as e:
            print(f"Ошибка расчета центростремительной силы: {e}")
            raise
    
    @staticmethod
    def pressure(P: float, S: float) -> float:
        """Сила давления: F = P * S"""
        try:
            if _PHYSICS_DLL is None:
                _load_dll()
            return _PHYSICS_DLL.pressure(c_double(P), c_double(S))
        except Exception as e:
            print(f"Ошибка расчета силы давления: {e}")
            raise
    
    @staticmethod
    def hydrostatic(p: float, h: float, S: float, g: Optional[float] = None) -> float:
        """Гидростатическое давление: F = ρ * g * h * S"""
        try:
            if _PHYSICS_DLL is None:
                _load_dll()
            if g is None:
                from constants.physics import g as default_g
                g = default_g
            return _PHYSICS_DLL.hydrostatic(c_double(p), c_double(h), c_double(S), c_double(g))
        except Exception as e:
            print(f"Ошибка расчета гидростатического давления: {e}")
            raise


# Класс для работы с энергией
class Energy:
    """Функции для расчета энергии"""
    
    @staticmethod
    def kinetic(m: float, V: float) -> float:
        """Кинетическая энергия: E = m * V² / 2"""
        try:
            if _PHYSICS_DLL is None:
                _load_dll()
            return _PHYSICS_DLL.kinetic(c_double(m), c_double(V))
        except Exception as e:
            print(f"Ошибка расчета кинетической энергии: {e}")
            raise
